# Agile-software-development

./: CMakeLists.txt  README.md  main.cpp
affiliation/: Affiliation.h  NoAffiliation.cpp  NoAffiliation.h  UnionAffiliation.cpp  UnionAffiliation.h
classification/: CommissionedClassification.cpp  CommissionedClassification.h  HourlyClassification.cpp  HourlyClassification.h  PaymentClassification.cpp  PaymentClassification.h  SalariedClassification.cpp  SalariedClassification.h
paymentmethod/: DirectMethod.cpp  DirectMethod.h  HoldMethod.cpp  HoldMethod.h  MailMethod.cpp  MailMethod.h  PaymentMethod.h
schedule/: BiweeklySchedule.cpp  BiweeklySchedule.h  MonthlySchedule.cpp  MonthlySchedule.h  PaymentSchedule.h  WeeklySchedule.cpp  WeeklySchedule.h
transactions/: AddCommissionedEmployee.cpp  AddCommissionedEmployee.h  AddEmployeeTransaction.cpp  AddEmployeeTransaction.h  AddHourlyEmployee.cpp  AddHourlyEmployee.h  AddSalariedEmployee.cpp  AddSalariedEmployee.h  ChangeAddressTransaction.cpp  ChangeAddressTransaction.h  ChangeAffiliationTransaction.cpp  ChangeAffiliationTransaction.h  ChangeClassificationTransaction.cpp  ChangeClassificationTransaction.h  ChangeCommissionedTransaction.cpp  ChangeCommissionedTransaction.h  ChangeDirectMethodTransaction.cpp  ChangeDirectMethodTransaction.h  ChangeEmployeeTransaction.cpp  ChangeEmployeeTransaction.h  ChangeHoldMethodTransaction.cpp  ChangeHoldMethodTransaction.h  ChangeHourlyTransaction.cpp  ChangeHourlyTransaction.h  ChangeMailMethodTransaction.cpp  ChangeMailMethodTransaction.h  ChangeMemberTransaction.cpp  (+21 more)
(+15 files in other folders)
